--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="icon" href="img/icon.png" color="black">
     <title>Magnefica</title>
     <!-- My CSS -->
     <style>
@@ -25,7 +25,7 @@
     <!--header-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><i class='bx bxl-medium'>agnefica</i></a>
+        <a class="navbar-brand" href="index.html"> <img src="img/icon.png" width="50px">Magnefica </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -78,13 +78,22 @@
         </div>
       </div>
     </nav>
-    <!--about-->
+    <!--body-->
+    <div class="card">
+      <div class="card-header">
+        Home
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">Selamat Datang!</h5>
+        <p class="card-text">Halo para warga, selamat datang di web Magnefica! informasi seputar server kami bisa kalian baca di About atau dengan mengklik tombol yang ada dibawah ini.</p>
+        <a href="about.html" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
 
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
-    <!-- Copyright -->
     <center>
     <div id="copyright">
         <div class="wrapper">
