--- a/update.html
+++ b/update.html
@@ -83,6 +83,7 @@
       <div class="card-header">
         Server Updates
       </div>
+      <!--Content-->
         <div class="alert alert-success" role="alert">
           <h5 class="card-title">Update Magnefica v0.1</h5>
           <ol class="list-group list-group-numbered">
@@ -111,6 +112,13 @@
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Gaji Sweeper Rute B</div>
                 Menjadi $140 per sekali kerja.
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update Rank SAPD</div>
+                Culture English to Indonesian.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
