--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -32,27 +32,27 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="ann.html">Announcement</a>
+              <a class="nav-link" href="../ann.html">Announcement</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="update.html">Updates</a>
+              <a class="nav-link" href="../update.html">Updates</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
+              <a class="nav-link" href="../about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Fraction
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="goodside/gov.html">Magnefica Government</a></li>
-                <li><a class="dropdown-item" href="goodside/police.html">Magnefica Police</a></li>
-                <li><a class="dropdown-item" href="goodside/medic.html">Magnefica Medic</a></li>
-                <li><a class="dropdown-item" href="goodside/news.html">Magnefica News</a></li>
-                <li><a class="dropdown-item" href="goodside/foodtrader.html">Magnefica Food trader</a></li>
+                <li><a class="dropdown-item" href="gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="police.html">Magnefica Police</a></li>
+                <li><a class="dropdown-item" href="medic.html">Magnefica Medic</a></li>
+                <li><a class="dropdown-item" href="news.html">Magnefica News</a></li>
+                <li><a class="dropdown-item" href="foodtrader.html">Magnefica Food trader</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
@@ -68,10 +68,10 @@
                 More information
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="moreinformation/admininformation.html">Admin information</a></li>
-                <li><a class="dropdown-item" href="moreinformation/event.html">Event</a></li>
-                <li><a class="dropdown-item" href="moreinformation/donationinformation.html">Donation information</a></li>
-                <li><a class="dropdown-item" href="moreinformation/rules.html">Rules</a></li>
+                <li><a class="dropdown-item" href="../moreinformation/admininformation.html">Admin information</a></li>
+                <li><a class="dropdown-item" href="../moreinformation/event.html">Event</a></li>
+                <li><a class="dropdown-item" href="../moreinformation/donationinformation.html">Donation information</a></li>
+                <li><a class="dropdown-item" href="../moreinformation/rules.html">Rules</a></li>
               </ul>
             </li>
           </ul>
