--- a/about.html
+++ b/about.html
@@ -81,16 +81,51 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        Server Announcement
+        About
       </div>
-        <div class="alert alert-success" role="alert">
-          <h4 class="alert-heading">Server Online!</h4>
-          <p>Horee! server dalam keadaan online, silahkan masuk dan selamat bersenang-senang.</p>
-          <hr>
-          <p class="mb-0">This posted in <b>08 January 2024</b>.</p>
+      <div class="card text-center">
+        <div class="card-body">
+          <h5 class="card-title">Sejarah dibentuknya server</h5>
+          <p class="card-text">Server ini direncanakan oleh 3 orang pendiri utama yang sekarang menjadi Founder di server ini, dari rencana mereka membuat server hanya satu orang yang memiliki dana untuk menyewa jasa Developer, dan akhirnya kami menemukan Developer yang cocok dengan kami dan membantu memperbaiki kekurangan di server. Ingin melihat lebih banyak tentang staff?</p>
+          <a href="moreinformation/admininformation.html" class="btn btn-primary">Click here!</a>
         </div>
+      </div>
     </div>
 
+    <div class="card">
+      <div class="card-header">
+        Contact via WhatsApp
+      </div>
+      <div class="row">
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Owner Server</h5>
+              <p class="card-text">Hello, my nickname is Kyy. I'm a Owner Server.</p>
+              <a href="https://wa.me/6282373100219?text=" class="btn btn-success">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Developer Web</h5>
+              <p class="card-text">Hello, my nickname is SilumanKatak. I'm a Developer Web.</p>
+              <a href="https://wa.me/6282315431207?text=" class="btn btn-success">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Developer SAMP</h5>
+              <p class="card-text">Hello, my nickname is Riel. I'm a Developer SAMP.</p>
+              <a href="https://wa.me/6285768221500?text=" class="btn btn-success">Contact</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
