--- a/index.html
+++ b/index.html
@@ -104,7 +104,44 @@
           </div>
         </div>
     </div>
-
+    <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="img/b1.png" class="d-block w-100" alt="banner logo">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Magnefica</h5>
+            <p>Kami membuat server kami dengan nama Magnefica itu diambil dari bahasa Latin yang aslinya Magnifica yang berarti Agung atau Mulia, kami sengaja mempelesetkan dari yang tadinya Magnifica menjadi Magnefica itu karena kami percaya bahwa hanya Tuhan lah yang maha Mulia.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/b2.png" class="d-block w-100" alt="banner 2">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="img/b3.png" class="d-block w-100" alt="banner 3">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
     <hr>
 
     <!--copyright-->
