--- a/update.html
+++ b/update.html
@@ -122,6 +122,13 @@
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update Sistem Comunication</div>
+                The typing system becomes voice and type.
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
           </ol>
           <hr>
           <p class="mb-0">This posted in <b>08 January 2024</b>.</p>
