--- a/about.html
+++ b/about.html
@@ -101,8 +101,17 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Owner Server</h5>
-              <p class="card-text">Hello, my nickname is Kyy. I'm a Owner Server.</p>
-              <a href="https://wa.me/6282373100219?text=" class="btn btn-success">Contact</a>
+              <p class="card-text">Hello, my nickname is Zura. I'm a Owner Server.</p>
+              <a href="https://wa.me/6282373100219?text=Owner?" class="btn btn-success">Contact</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Founder Server</h5>
+              <p class="card-text">Hello, my nickname is Kenjo. I'm a Founder Server.</p>
+              <a href="https://wa.me/628975558865?text=Founder?" class="btn btn-success">Contact</a>
             </div>
           </div>
         </div>
@@ -111,7 +120,7 @@
             <div class="card-body">
               <h5 class="card-title">Developer Web</h5>
               <p class="card-text">Hello, my nickname is SilumanKatak. I'm a Developer Web.</p>
-              <a href="https://wa.me/6282315431207?text=" class="btn btn-success">Contact</a>
+              <a href="https://wa.me/6282315431207?text=Devweb?" class="btn btn-success">Contact</a>
             </div>
           </div>
         </div>
@@ -120,7 +129,7 @@
             <div class="card-body">
               <h5 class="card-title">Developer SAMP</h5>
               <p class="card-text">Hello, my nickname is Riel. I'm a Developer SAMP.</p>
-              <a href="https://wa.me/6285768221500?text=" class="btn btn-success">Contact</a>
+              <a href="https://wa.me/6285768221500?text=Devsamp?" class="btn btn-success">Contact</a>
             </div>
           </div>
         </div>
