--- a/update.html
+++ b/update.html
@@ -135,6 +135,22 @@
         </div>
     </div>
 
+    <div class="alert alert-success" role="alert">
+          <h5 class="card-title">Update Magnefica v0.2</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update FIX BUG Burgershot</div>
+                Create Coca-cola.
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
+          </ol>
+          <hr>
+          <p class="mb-0">This posted in <b>09 January 2024</b>.</p>
+        </div>
+    </div>
+
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
