--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -1,1 +1,100 @@
-Belum Update Gess.....
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Boxicons CSS -->
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="icon" href="../img/icon.png" color="black">
+    <title>Magnefica | Donation Information</title>
+    <!-- My CSS -->
+    <style>
+        #copyright {
+            text-align: center;
+            width: 100%;
+            padding-bottom: 5rem;
+            background: #ccc;
+        }
+    </style>
+  </head>
+  <body>
+    <!--header-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html"> <img src="../img/icon.png" width="50px">Magnefica </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../ann.html">Announcement</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../update.html">Updates</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../about.html">About</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Fraction
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="../goodside/gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="../goodside/police.html">Magnefica Police</a></li>
+                <li><a class="dropdown-item" href="../goodside/medic.html">Magnefica Medic</a></li>
+                <li><a class="dropdown-item" href="../goodside/news.html">Magnefica News</a></li>
+                <li><a class="dropdown-item" href="../goodside/foodtrader.html">Magnefica Food trader</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Family
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="#">- No Family yet -</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                More information
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item" href="admininformation.html">Admin information</a></li>
+                <li><a class="dropdown-item" href="event.html">Event</a></li>
+                <li><a class="dropdown-item" href="donationinformation.html">Donation information</a></li>
+                <li><a class="dropdown-item" href="rules.html">Rules</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--body-->
+    <div class="card">
+      <div class="card-header">
+        <center><h5 style="color:darkorange;">Donation Information</h5></center>
+      </div>
+    </div>
+
+    <!--copyright-->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <center>
+    <div id="copyright">
+        <div class="wrapper">
+            &copy;2024 <b>Magnefica</b> All Rights Reserved.
+        </div>
+    </div>
+    </center>
+  </body>
+</html>
