--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -85,6 +85,56 @@
       </div>
     </div>
 
+	<table class="table">
+	  <thead>
+	    <tr>
+	      <th scope="col">#</th>
+	      <th scope="col">Packet</th>
+	      <th scope="col">Price</th>
+	      <th scope="col">Feedback</th>
+	    </tr>
+	  </thead>
+	  <tbody>
+	    <tr class="table-secondary">
+	      <th scope="row">1</th>
+	      <td>Basic</td>
+	      <td>Rp 15.000</td>
+	      <td>
+	      	<li>VIP Level 1 (20 days)</li>
+	      	<li>Skin Import</li>
+	    	<li>Level +2</li>
+	      	<li>Free 1 Vehicle (Regular Dealer)</li>
+	      	<li>House Small (Free to choose)</li>
+	      </td>
+	    </tr class="table-warning">
+	    <tr>
+	      <th scope="row">2</th>
+	      <td>Normal</td>
+	      <td>Rp 30.000</td>
+	      <td>
+	      	<li>VIP Level 2 (30 days)</li>
+	      	<li>Level +3</li>
+	      	<li>Skin Import (1 Unit)</li>
+	      	<li>House Medium</li>
+	      	<li>Private Locker house</li>
+	      	<li>Free Land Import Vehicle (1 Unit)</li>
+	      </td>
+	    </tr>
+	    <tr>
+	      <th scope="row">3</th>
+	      <td>Advenced</td>
+	      <td>Rp 50.000</td>
+	      <td>Kamu kepo yaa...</td>
+	    </tr>
+	    <tr>
+	      <th scope="row">4</th>
+	      <td>Professional</td>
+	      <td>Rp 100.000</td>
+	      <td>Kamu kepo yaa...</td>
+	    </tr>
+	  </tbody>
+	</table>
+
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
