--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -106,8 +106,8 @@
 	      	<li>Free 1 Vehicle (Regular Dealer)</li>
 	      	<li>House Small (Free to choose)</li>
 	      </td>
-	    </tr class="table-warning">
-	    <tr>
+	    </tr>
+	    <tr class="table-warning">
 	      <th scope="row">2</th>
 	      <td>Normal</td>
 	      <td>Rp 30.000</td>
