--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -101,8 +101,8 @@
 	      <td>Rp 15.000</td>
 	      <td>
 	      	<li>VIP Level 1 (20 days)</li>
-	      	<li>Skin Import</li>
 	    	<li>Level +2</li>
+	      	<li>Skin Import (1 Unit)</li>
 	      	<li>Free 1 Vehicle (Regular Dealer)</li>
 	      	<li>House Small (Free to choose)</li>
 	      </td>
