--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -124,13 +124,31 @@
 	      <th scope="row">3</th>
 	      <td>Advenced</td>
 	      <td>Rp 50.000</td>
-	      <td>Kamu kepo yaa...</td>
+	      <td>
+	      	<li>VIP Level 3 (30 days)</li>
+	      	<li>Level +4</li>
+	      	<li>Skin Import (1 Unit)</li>
+	      	<li>House High/Big</li>
+	      	<li>Private Locker house</li>
+	      	<li>Free Land Import Vehicle (1 Unit)</li>
+	      	<li>Business (Clothing Store)</li>
+	      	<li>Component 5000</li>
+	      </td>
 	    </tr>
 	    <tr>
 	      <th scope="row">4</th>
 	      <td>Professional</td>
 	      <td>Rp 100.000</td>
-	      <td>Kamu kepo yaa...</td>
+	      <td>
+	      	<li>VIP Level 4 (30 days)</li>
+	      	<li>Level +2</li>
+	      	<li>Skin Import (2 Unit)</li>
+	      	<li>House High/Big</li>
+	      	<li>Private Locker house</li>
+	      	<li>Free Air Import Vehicle (1 Unit)</li>
+	      	<li>Business (Food Store)</li>
+	      	<li>Component 5000</li>
+	      </td>
 	    </tr>
 	  </tbody>
 	</table>
