--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -120,7 +120,7 @@
 	      	<li>Free Land Import Vehicle (1 Unit)</li>
 	      </td>
 	    </tr>
-	    <tr>
+	    <tr class="table-info">
 	      <th scope="row">3</th>
 	      <td>Advenced</td>
 	      <td>Rp 50.000</td>
@@ -135,7 +135,7 @@
 	      	<li>Component 5000</li>
 	      </td>
 	    </tr>
-	    <tr>
+	    <tr class="table-success">
 	      <th scope="row">4</th>
 	      <td>Professional</td>
 	      <td>Rp 100.000</td>
