--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="flush-headingOne">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-              <h5 class="card-title">IP Server</h5>
+              <h5 class="card-title">Server</h5>
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">IP : <code>139.162.9.171:7777</code></div>
+            <div class="accordion-body"><button type="button" class="btn btn-primary" href="https://discord.com/invite/9dFuFVbDh3">Click here to Discord</button></div>
           </div>
         </div>
     </div>
