--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
             <div class="accordion-body">IP : <code>139.162.9.171:7777</code></div>
-            <div class="accordion-body"><a type="button" class="btn btn-primary">Click here to Discord</a></div>
+            <div class="accordion-body"><a href="https://discord.com/invite/9dFuFVbDh3" type="button" class="btn btn-primary">Click here to Discord</a></div>
           </div>
         </div>
     </div>
