--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Developer Web</h5>
-              <p class="card-text">Hello, my nickname is SilumanKatak. I'm a Developer Web.</p>
+              <p class="card-text">Hello, my nickname is Nicholas. I'm a Developer Web.</p>
               <a href="https://wa.me/6283101214581?text=Developer%20Web%20Magnefica%20ya?" class="btn btn-success">Contact</a>
             </div>
           </div>
