--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             <div class="card-body">
               <h5 class="card-title">Owner Server</h5>
               <p class="card-text">Hello, my nickname is Zoya/Henky. I'm a Owner Server.</p>
-              <a href="https://wa.me/6282373100219?text=Owner%20Server%20Magnefica%20ya?" class="btn btn-success">Contact</a>
+              <a href="https://wa.me/6282373100219?text=Owner%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
             </div>
           </div>
         </div>
@@ -111,7 +111,7 @@
             <div class="card-body">
               <h5 class="card-title">Founder Server</h5>
               <p class="card-text">Hello, my nickname is Kenjo. I'm a Founder Server.</p>
-              <a href="https://wa.me/628975558865?text=Founder%20Server%20Magnefica%20ya?" class="btn btn-success">Contact</a>
+              <a href="https://wa.me/628975558865?text=Founder%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
             </div>
           </div>
         </div>
@@ -120,7 +120,7 @@
             <div class="card-body">
               <h5 class="card-title">Developer Web</h5>
               <p class="card-text">Hello, my nickname is Nicholas. I'm a Developer Web.</p>
-              <a href="https://wa.me/6283101214581?text=Developer%20Web%20Magnefica%20ya?" class="btn btn-success">Contact</a>
+              <a href="https://wa.me/6283101214581?text=Developer%20Web%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
             </div>
           </div>
         </div>
@@ -129,7 +129,7 @@
             <div class="card-body">
               <h5 class="card-title">Developer SAMP</h5>
               <p class="card-text">Hello, my nickname is Riel. I'm a Developer SAMP.</p>
-              <a href="https://wa.me/6285768221500?text=Developer%20SAMP%20Magnefica%20ya?" class="btn btn-success">Contact</a>
+              <a href="https://wa.me/6285768221500?text=Developer%20SAMP%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
             </div>
           </div>
         </div>
