--- a/goodside/foodtrader.html
+++ b/goodside/foodtrader.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:blueviolet;">Food Trader</h5></center>
+        <center><h5 style="color:blueviolet;"><i class='bx bxs-bowl-rice'></i> Food Trader <i class='bx bxs-bowl-rice'></i></h5></center>
       </div>
     </div>
 
