--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkorange;">Government</h5></center>
+        <center><h5 style="color:darkorange;"><i class='bx bxs-bank'></i> Government <i class='bx bxs-bank'></i></h5></center>
       </div>
     </div>
 
