--- a/goodside/medic.html
+++ b/goodside/medic.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkred;">Medical Departement</h5></center>
+        <center><h5 style="color:darkred;"><i class='bx bx-plus-medical'></i> Medical Departement <i class='bx bx-plus-medical'></i></h5></center>
       </div>
     </div>
 
