--- a/goodside/news.html
+++ b/goodside/news.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkgreen;">News Departement</h5></center>
+        <center><h5 style="color:darkgreen;"><i class='bx bx-news'></i> News Departement <i class='bx bx-news'></i></h5></center>
       </div>
     </div>
 
