--- a/goodside/police.html
+++ b/goodside/police.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkblue;">Police Departement</h5></center>
+        <center><h5 style="color:darkblue;"><i class='bx bx-shield-alt'></i> Police Departement <i class='bx bx-shield-alt'></i></h5></center>
       </div>
     </div>
 
