--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkorange;">Donation Information</h5></center>
+        <center><h5 style="color:darkorange;"><i class='bx bxs-badge-dollar'></i> Donation Information <i class='bx bxs-badge-dollar'></i></h5></center>
       </div>
     </div>
 
@@ -97,7 +97,7 @@
 	  <tbody>
 	    <tr class="table-secondary">
 	      <th scope="row">1</th>
-	      <td>Basic</td>
+	      <td>Basic <i class='bx bxs-star'></i><i class='bx bx-star'></i><i class='bx bx-star'></i><i class='bx bx-star'></i></td>
 	      <td>Rp 15.000</td>
 	      <td>
 	      	<li>VIP Level 1 (20 days)</li>
@@ -109,7 +109,7 @@
 	    </tr>
 	    <tr class="table-warning">
 	      <th scope="row">2</th>
-	      <td>Normal</td>
+	      <td>Normal <i class='bx bxs-star'></i><i class='bx bxs-star'></i><i class='bx bx-star'></i><i class='bx bx-star'></i></td>
 	      <td>Rp 30.000</td>
 	      <td>
 	      	<li>VIP Level 2 (30 days)</li>
@@ -122,7 +122,7 @@
 	    </tr>
 	    <tr class="table-info">
 	      <th scope="row">3</th>
-	      <td>Advenced</td>
+	      <td>Advenced <i class='bx bxs-star'><i class='bx bxs-star'><i class='bx bxs-star'><i class='bx bx-star'></i></td>
 	      <td>Rp 50.000</td>
 	      <td>
 	      	<li>VIP Level 3 (30 days)</li>
@@ -137,7 +137,7 @@
 	    </tr>
 	    <tr class="table-success">
 	      <th scope="row">4</th>
-	      <td>Professional</td>
+	      <td>Professional <i class='bx bxs-star'><i class='bx bxs-star'><i class='bx bxs-star'><i class='bx bxs-star'></td>
 	      <td>Rp 100.000</td>
 	      <td>
 	      	<li>VIP Level 4 (30 days)</li>
@@ -156,7 +156,7 @@
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    
+
     <center>
     <div id="copyright">
         <div class="wrapper">
