--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" href="../img/icon.png" color="black">
-    <title>Magnefica | List Administrator</title>
+    <title>Magnefica | Admin Information</title>
     <!-- My CSS -->
     <style>
         #copyright {
@@ -79,10 +79,100 @@
       </div>
     </nav>
     <!--body-->
-    <div class="card">
+    <div class="card shadow mb-5 bg-body rounded">
       <div class="card-header">
-        <center><h5 style="color:darkorange;">List Administrator</h5></center>
+        <center><h5 style="color:darkred;">Admin Information</h5></center>
       </div>
+    </div>
+    <div class="card" id="admin">
+      <div class="card-header">
+        List Administrator
+      </div>
+    </div>
+    <div class="container mt-3">
+      <table class="table table-bordered table-sm p-3 text-center">
+        <thead>
+          <tr class="p-3 mb-2 bg-dark text-white">
+            <th scope="col" class="align-middle"><i class='bx bx-chevrons-down'></i></th>
+            <th scope="col">Name</th>
+            <th scope="col">Position</th>
+            <th scope="col">Handle</th>
+            <th scope="col">Social Media</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-light">
+            <th scope="row" class="text-primary"><i class='bx bxl-sketch'></i></th>
+            <td><b class="text-primary">Zoya</b></td>
+            <td><b class="text-primary">Owner/Founder</b></td>
+            <td><b style="color:darkorange;"> Handle Goodside </b><br><b style="color:darkred;">Handle Badside</b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-crown'></i></th>
+            <td><b style="color:darkblue;">Kenjoo</b></td>
+            <td><b style="color:darkblue;">Management</b></td>
+            <td><b style="color:darkorange;"> Handle Goodside </b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-crown'></i></th>
+            <td><b style="color:darkblue;">SilumanKatak</b></td>
+            <td><b style="color:darkblue;">Management</b></td>
+            <td><b style="color:red;">Handle Report</b><br><b style="color:darkcyan;">Handle Website</b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:green;"><i class='bx bx-wrench'></i></th>
+            <td><b style="color:green;">Riel</b></td>
+            <td><b style="color:green;">Developer SAMP</b></td>
+            <td><b style="color:green;"> FIX and Update </b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkred;"><i class='bx bxs-check-shield'></i></th>
+            <td><b style="color:black;"> - </b></td>
+            <td><b style="color:darkred;">Head Administrator</b></td>
+            <td><b style="color:black;"> - </b></td>
+            <td></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkred;"><i class='bx bx-check-shield'></i></th>
+            <td><b style="color:black;"> - </b></td>
+            <td><b style="color:darkred;">General Administrator</b></td>
+            <td><b style="color:black;"> - </b></td>
+            <td></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:red;"><i class='bx bxs-check-square'></i></th>
+            <td><b style="color:red;">ClaraKaylaAulia</b></td>
+            <td><b style="color:red;">Administrator</b></td>
+            <td><b style="color:black;"> - </b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:orange;"><i class='bx bx-check-square' ></i></th>
+            <td><b style="color:orange;">LifeGuard</b></td>
+            <td><b style="color:orange;">Helper</b></td>
+            <td><b style="color:darkorange;"> Handle Goodside </b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:orange;"><i class='bx bx-check-square' ></i></th>
+            <td><b style="color:orange;">Ferxx</b></td>
+            <td><b style="color:orange;">Helper</b></td>
+            <td><b style="color:black;"> - </b></td>
+            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:yellowgreen;"><i class='bx bx-label'></i></th>
+            <td><b style="color:black;"> - </b></td>
+            <td><b style="color:yellowgreen;">Trial Volunter</b></td>
+            <td><b style="color:black;"> - </b></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <!--copyright-->
