--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -84,10 +84,16 @@
         <center><h5 style="color:darkorange;"><i class='bx bxs-badge-dollar'></i> Donation Information <i class='bx bxs-badge-dollar'></i></h5></center>
       </div>
     </div>
+   	<div class="card" id="admin">
+      <div class="card-header">
+        List Administrator
+      </div>
+    </div>
 
-	<table class="table">
+ <div class="container mt-3">
+	<table class="table table-bordered">
 	  <thead>
-	    <tr>
+	    <tr class="p-3 mb-2 bg-dark text-white">
 	      <th scope="col">#</th>
 	      <th scope="col">Packet</th>
 	      <th scope="col">Price</th>
@@ -152,7 +158,7 @@
 	    </tr>
 	  </tbody>
 	</table>
-
+ </div>
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
