--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -89,7 +89,7 @@
         List Administrator
       </div>
     </div>
-    <div class="container mt-3">
+    <div class="container w-75 mt-3">
       <table class="table table-bordered table-sm p-3 text-center">
         <thead>
           <tr class="p-3 mb-2 bg-dark text-white">
