--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -90,7 +90,7 @@
       </div>
     </div>
 
- <div class="container w-75 mt-3">
+ <div class="container mt-3">
 	<table class="table table-bordered">
 	  <thead>
 	    <tr class="p-3 mb-2 bg-dark text-white">
