--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -103,7 +103,7 @@
         <tbody>
           <tr class="table-light">
             <th scope="row" class="text-primary"><i class='bx bxl-sketch'></i></th>
-            <td><b class="text-primary">Zoya</b></td>
+            <td><b class="text-primary">Hengky</b></td>
             <td><b class="text-primary">Owner/Founder</b></td>
             <td><b style="color:darkorange;"> Handle Goodside </b><br><b style="color:darkred;">Handle Badside</b></td>
             <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
@@ -111,21 +111,21 @@
           <tr class="table-light">
             <th scope="row" style="color:darkblue;"><i class='bx bx-crown'></i></th>
             <td><b style="color:darkblue;">Kenjoo</b></td>
-            <td><b style="color:darkblue;">Management</b></td>
+            <td><b style="color:darkblue;">CEO</b></td>
             <td><b style="color:darkorange;"> Handle Goodside </b></td>
             <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkblue;"><i class='bx bx-crown'></i></th>
             <td><b style="color:darkblue;">SilumanKatak</b></td>
-            <td><b style="color:darkblue;">Management</b></td>
+            <td><b style="color:darkblue;">CEO</b></td>
             <td><b style="color:red;">Handle Report</b><br><b style="color:darkcyan;">Handle Website</b></td>
             <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:green;"><i class='bx bx-wrench'></i></th>
             <td><b style="color:green;">Riel</b></td>
-            <td><b style="color:green;">Developer SAMP</b></td>
+            <td><b style="color:green;">Management</b></td>
             <td><b style="color:green;"> FIX and Update </b></td>
             <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
           </tr>
