--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">Owner Server</h5>
-              <p class="card-text">Hello, my nickname is Zoya/Henky. I'm a Owner Server.</p>
+              <p class="card-text">Hello, my nickname is Hengky. I'm a Owner Server.</p>
               <a href="https://wa.me/6282373100219?text=Owner%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i> WhatsApp</a>
             </div>
           </div>
