--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -97,7 +97,7 @@
             <th scope="col">Name</th>
             <th scope="col">Position</th>
             <th scope="col">Handle</th>
-            <th scope="col">Social Media</th>
+            <th scope="col">Contact</th>
           </tr>
         </thead>
         <tbody>
@@ -106,28 +106,28 @@
             <td><b class="text-primary">Hengky</b></td>
             <td><b class="text-primary">Owner/Founder</b></td>
             <td><b style="color:darkorange;"> Handle Goodside </b><br><b style="color:darkred;">Handle Badside</b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/6282373100219?text=Owner%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkblue;"><i class='bx bx-crown'></i></th>
             <td><b style="color:darkblue;">Kenjoo</b></td>
             <td><b style="color:darkblue;">CEO</b></td>
             <td><b style="color:darkorange;"> Handle Goodside </b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/628975558865?text=CEO%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkblue;"><i class='bx bx-crown'></i></th>
             <td><b style="color:darkblue;">SilumanKatak</b></td>
             <td><b style="color:darkblue;">CEO</b></td>
             <td><b style="color:red;">Handle Report</b><br><b style="color:darkcyan;">Handle Website</b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/6283101214581?text=CEO%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:green;"><i class='bx bx-wrench'></i></th>
             <td><b style="color:green;">Riel</b></td>
             <td><b style="color:green;">Management</b></td>
             <td><b style="color:green;"> FIX and Update </b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/6285768221500?text=Developer%20SAMP%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkred;"><i class='bx bxs-check-shield'></i></th>
