--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -126,7 +126,7 @@
             <th scope="row" style="color:green;"><i class='bx bx-wrench'></i></th>
             <td><b style="color:green;">Riel</b></td>
             <td><b style="color:green;">Management</b></td>
-            <td><b style="color:green;"> FIX and Update </b></td>
+            <td><b style="color:green;"> Developer SAMP </b></td>
             <td><a href="https://wa.me/6285768221500?text=Developer%20SAMP%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
