--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -86,7 +86,7 @@
     </div>
    	<div class="card" id="admin">
       <div class="card-header">
-        List Administrator
+        Price Information
       </div>
     </div>
 
