--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -148,21 +148,21 @@
             <td><b style="color:red;">ClaraKaylaAulia</b></td>
             <td><b style="color:red;">Administrator</b></td>
             <td><b style="color:black;"> - </b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/628?text=Administrator%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:orange;"><i class='bx bx-check-square' ></i></th>
             <td><b style="color:orange;">LifeGuard</b></td>
             <td><b style="color:orange;">Helper</b></td>
             <td><b style="color:darkorange;"> Handle Goodside </b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/6281901470867?text=Helper%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:orange;"><i class='bx bx-check-square' ></i></th>
-            <td><b style="color:orange;">Ferxx</b></td>
+            <td><b style="color:orange;">MIKIMOUS</b></td>
             <td><b style="color:orange;">Helper</b></td>
             <td><b style="color:black;"> - </b></td>
-            <td><a href="#" type="button" class="btn btn-outline-primary"><i class='bx bxl-discord-alt' ></i></a></td>
+            <td><a href="https://wa.me/6289520718688?text=Helper%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:yellowgreen;"><i class='bx bx-label'></i></th>
