--- a/update.html
+++ b/update.html
@@ -86,6 +86,21 @@
       <!--Content-->
 
         <div class="alert alert-success" role="alert">
+          <h5 class="card-title">Update Magnefica v0.3</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div class="fw-bold">Update Fraction</div>
+                (-) Removed Faction News<br>(+) Add New Faction FBI
+              </div>
+              <span class="badge bg-primary rounded-pill">FIX</span>
+            </li>
+          </ol>
+          <hr>
+          <p class="mb-0">This posted in <b>11 January 2024</b>.</p>
+        </div>
+
+        <div class="alert alert-success" role="alert">
           <h5 class="card-title">Update Magnefica v0.2</h5>
           <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
