--- a/update.html
+++ b/update.html
@@ -90,8 +90,9 @@
           <ol class="list-group list-group-numbered">
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
-                <div class="fw-bold">Update Fraction</div>
-                (-) Removed Faction News<br>(+) Add New Faction FBI
+                <div class="fw-bold">Update Faction</div>
+                <i class='bx bxs-trash-alt' style="color:red;"></i> Removed Faction News.<br>
+                <i class='bx bxs-plus-circle' style="color:green;"></i> Add New Faction FBI.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
@@ -106,7 +107,7 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update FIX BUG Burgershot</div>
-                Create Coca-cola.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Create Coca-cola.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
@@ -122,42 +123,42 @@
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Gaji Bus Rute A</div>
-                Menjadi $140 per sekali kerja.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Menjadi $140 per sekali kerja.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Gaji Bus Rute B</div>
-                Menjadi $160 per sekali kerja.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Menjadi $160 per sekali kerja.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Gaji Sweeper Rute A</div>
-                Menjadi $120 per sekali kerja.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Menjadi $120 per sekali kerja.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Gaji Sweeper Rute B</div>
-                Menjadi $140 per sekali kerja.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Menjadi $140 per sekali kerja.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Rank SAPD</div>
-                Culture English to Indonesian.
+                <i class='bx bxs-upvote' style="color:blue;"></i> Culture English to Indonesian.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-start">
               <div class="ms-2 me-auto">
                 <div class="fw-bold">Update Sistem Comunication</div>
-                The typing system becomes voice and type.
+                <i class='bx bxs-upvote' style="color:blue;"></i> The typing system becomes voice and type.
               </div>
               <span class="badge bg-primary rounded-pill">FIX</span>
             </li>
