--- a/goodside/fbi.html
+++ b/goodside/fbi.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="icon" href="../img/icon.png" color="black">
-    <title>Magnefica | News Departement</title>
+    <title>Magnefica | FBI</title>
     <!-- My CSS -->
     <style>
         #copyright {
@@ -49,9 +49,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="fbi.html">Magnefica FBI</a></li>
                 <li><a class="dropdown-item" href="police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="medic.html">Magnefica Medic</a></li>
-                <li><a class="dropdown-item" href="news.html">Magnefica News</a></li>
                 <li><a class="dropdown-item" href="foodtrader.html">Magnefica Food trader</a></li>
               </ul>
             </li>
@@ -81,7 +81,7 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkgreen;"><i class='bx bx-news'></i> News Departement <i class='bx bx-news'></i></h5></center>
+        <center><h5 style="color:darkgreen;"><i class='bx bx-shield-quarter'></i> FBI Magnefica <i class='bx bx-shield-quarter'></i></h5></center>
       </div>
     </div>
 
