--- a/moreinformation/event.html
+++ b/moreinformation/event.html
@@ -49,9 +49,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="../goodside/gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>
                 <li><a class="dropdown-item" href="../goodside/police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="../goodside/medic.html">Magnefica Medic</a></li>
-                <li><a class="dropdown-item" href="../goodside/news.html">Magnefica News</a></li>
                 <li><a class="dropdown-item" href="../goodside/foodtrader.html">Magnefica Food trader</a></li>
               </ul>
             </li>
@@ -83,6 +83,12 @@
       <div class="card-header">
         <center><h5 style="color:darkorange;">Event Information</h5></center>
       </div>
+    </div>
+
+    <!--content-->
+
+    <div class="container mt-3 mb-3 p-5" style="background:#e0cdb7; border-radius: 50px; border:1px solid #b3a08a;">
+      Masih Belum ada Event
     </div>
 
     <!--copyright-->
