--- a/moreinformation/rules.html
+++ b/moreinformation/rules.html
@@ -49,9 +49,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="../goodside/gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>
                 <li><a class="dropdown-item" href="../goodside/police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="../goodside/medic.html">Magnefica Medic</a></li>
-                <li><a class="dropdown-item" href="../goodside/news.html">Magnefica News</a></li>
                 <li><a class="dropdown-item" href="../goodside/foodtrader.html">Magnefica Food trader</a></li>
               </ul>
             </li>
@@ -81,8 +81,19 @@
     <!--body-->
     <div class="card">
       <div class="card-header">
-        <center><h5 style="color:darkorange;">Rules</h5></center>
+        <center><h5 style="color:darkorange;">Server Rules</h5></center>
       </div>
+    </div>
+
+    <!--content-->
+
+    <div class="container mt-3 mb-3 p-5" style="color:white; background:#1f2037; border-radius: 50px; border:1px solid #0c070a;">
+      <!-- BAB I -->
+      <center>
+        <h4>BAB I</h4>
+        <h5>PENGGUNAAN SA:MP</h5><hr>
+      </center>
+
     </div>
 
     <!--copyright-->
