--- a/goodside/police.html
+++ b/goodside/police.html
@@ -49,9 +49,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="fbi.html">Magnefica FBI</a></li>
                 <li><a class="dropdown-item" href="police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="medic.html">Magnefica Medic</a></li>
-                <li><a class="dropdown-item" href="news.html">Magnefica News</a></li>
                 <li><a class="dropdown-item" href="foodtrader.html">Magnefica Food trader</a></li>
               </ul>
             </li>
