--- a/moreinformation/donationinformation.html
+++ b/moreinformation/donationinformation.html
@@ -49,9 +49,9 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                 <li><a class="dropdown-item" href="../goodside/gov.html">Magnefica Government</a></li>
+                <li><a class="dropdown-item" href="../goodside/fbi.html">Magnefica FBI</a></li>
                 <li><a class="dropdown-item" href="../goodside/police.html">Magnefica Police</a></li>
                 <li><a class="dropdown-item" href="../goodside/medic.html">Magnefica Medic</a></li>
-                <li><a class="dropdown-item" href="../goodside/news.html">Magnefica News</a></li>
                 <li><a class="dropdown-item" href="../goodside/foodtrader.html">Magnefica Food trader</a></li>
               </ul>
             </li>
