--- a/moreinformation/admininformation.html
+++ b/moreinformation/admininformation.html
@@ -148,7 +148,7 @@
             <td><b style="color:red;">ClaraKaylaAulia</b></td>
             <td><b style="color:red;">Administrator</b></td>
             <td><b style="color:black;"> - </b></td>
-            <td><a href="https://wa.me/628?text=Administrator%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
+            <td><a href="https://wa.me/6282268918485?text=Administrator%20Server%20Magnefica%20ya?" class="btn btn-success"><i class='bx bxl-whatsapp'></i></a></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:orange;"><i class='bx bx-check-square' ></i></th>
