--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -92,7 +92,8 @@
         <thead>
           <tr class="p-3 mb-2 bg-dark text-white">
             <th scope="col" class="align-middle"><i class='bx bx-chevrons-down'></i></th>
-            <th scope="col">Name</th>
+            <th scope="col">Name IC</th>
+            <th scope="col">Name DC</th>
             <th scope="col">Position</th>
             <th scope="col">Political Parties</th>
           </tr>
@@ -101,11 +102,13 @@
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;">William Scout</b></td>
+            <td><b style="color:purple;">SilumanKatak</b></td>
             <td><b style="color:darkorange;">Governor</b></td>
             <td><b style="color:blue;"> Democratic party </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Deputy Governor</b></td>
             <td><b style="color:black;"> - </b></b></td>
@@ -113,11 +116,13 @@
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Regional People's Representative</b></td>
             <td><b style="color:black;"> - </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Secretary Regional</b></td>
             <td><b style="color:black;"> - </b></b></td>
@@ -125,11 +130,13 @@
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Governor's Staff</b></td>
             <td><b style="color:black;"> - </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Minister of Religion</b></td>
             <td><b style="color:black;"> - </b></b></td>
@@ -137,11 +144,13 @@
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Minister of Law</b></td>
             <td><b style="color:black;"> - </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Lawyer</b></td>
             <td><b style="color:black;"> - </b></b></td>
@@ -149,11 +158,13 @@
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Treasurer</b></td>
             <td><b style="color:black;"> - </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Licensor</b></td>
             <td><b style="color:black;"> - </b></b></td>
@@ -161,17 +172,20 @@
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Secretary</b></td>
             <td><b style="color:black;"> - </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
             <td><b style="color:darkorange;"> - </b></td>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Bodyguard</b></td>
             <td><b style="color:black;"> - </b></b></td>
           </tr>
           <tr class="table-light">
             <th scope="row" style="color:darkorange;"><i class='bx bxs-bank'></i></th>
+            <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;"> - </b></td>
             <td><b style="color:darkorange;">Driver</b></td>
             <td><b style="color:black;"> - </b></b></td>
