--- a/goodside/gov.html
+++ b/goodside/gov.html
@@ -196,7 +196,7 @@
 
     <!--Discord-->
     <div class="container">
-      Untuk Sementara Discord Khusus Goverentment belum dibuat
+      Untuk Sementara Discord Khusus Pemerintahan belum dibuat
     </div>
 
     <!--copyright-->
