--- a/moreinformation/rules.html
+++ b/moreinformation/rules.html
@@ -90,10 +90,47 @@
     <div class="container mt-3 mb-3 p-5" style="color:white; background:#1f2037; border-radius: 50px; border:1px solid #0c070a;">
       <!-- BAB I -->
       <center>
-        <h4>BAB I</h4>
+        <h5>BAB I</h5>
         <h5>PENGGUNAAN SA:MP</h5><hr>
       </center>
-
+      <div class="alert alert-success" role="alert">
+        <h5 class="card-title">Pasal 1 : Ketentuan Client</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  Pemain dapat menggunakan Client SA:MP Android maupun PC. 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  Pemain diharapkan untuk menyambungkan Client dan Server dengan Internet tanpa Perantara (Proxy/VPN). Pengecualian diberikan jika pemain tidak bisa terhubung dengan server sehingga memerlukan hubungan perantara.
+                </div>
+              </div>
+            </li>
+          </ol>
+          <hr>
+          <h5 class="card-title">Pasal 2 : Modifikasi Client dan Game</h5>
+          <ol class="list-group list-group-numbered">
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  - 
+                </div>
+              </div>
+            </li>
+            <li class="list-group-item d-flex justify-content-between align-items-start">
+              <div class="ms-2 me-auto">
+                <div>
+                  -
+                </div>
+              </div>
+            </li>
+          </ol>
+          <hr>
+      </div>
     </div>
 
     <!--copyright-->
