--- a/goodside/police.html
+++ b/goodside/police.html
@@ -85,6 +85,106 @@
       </div>
     </div>
 
+    <!--content-->
+
+    <div class="container mt-3">
+      <table class="table table-bordered table-sm p-3 text-center">
+        <thead>
+          <tr class="p-3 mb-2 bg-dark text-white">
+            <th scope="col" class="align-middle"><i class='bx bx-chevrons-down'></i></th>
+            <th scope="col">Name IC</th>
+            <th scope="col">Name DC</th>
+            <th scope="col">Position</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;">Kenzo Daizuke</b></td>
+            <td><b style="color:purple;">Kenjoo</b></td>
+            <td><b style="color:darkblue;">Jendral/Kapolda</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">IRJEN</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">KOMBES</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">AKBP</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">KOMPOL</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">AKP</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">IPTU</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">IPDA</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">AIPTU</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">AIPDA</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">BRIPKA</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">BRIPTU</b></td>
+          </tr>
+          <tr class="table-light">
+            <th scope="row" style="color:darkblue;"><i class='bx bx-shield-alt'></i></th>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;"> - </b></td>
+            <td><b style="color:darkblue;">BRIPDA</b></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!--Discord-->
+    <div class="container">
+      
+    </div>
+
     <!--copyright-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
